--- a/mychart/values.yaml
+++ b/mychart/values.yaml
@@ -4,3 +4,7 @@ image:
   repository: nginx
   tag: "latest"
   pullPolicy: IfNotPresent
+  service:
+    name: mychart
+    type: ClusterIP
+    port: 80
