--- a/mychart/templates/serviceaccount.yaml
+++ b/mychart/templates/serviceaccount.yaml
@@ -1,13 +1,8 @@
-{{- if .Values.serviceAccount.create -}}
+{{- if .Values.serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "mychart.serviceAccountName" . }}
+  name: {{ .Values.serviceAccount.name | default (include "mychart.fullname" .) }}
   labels:
     {{- include "mychart.labels" . | nindent 4 }}
-  {{- with .Values.serviceAccount.annotations }}
-  annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
-automountServiceAccountToken: {{ .Values.serviceAccount.automount }}
 {{- end }}
