add ingress value

--- a/mychart/values.yaml
+++ b/mychart/values.yaml
@@ -9,7 +9,17 @@ service:
   name: mychart
   type: ClusterIP
   port: 80
-    
+
 serviceAccount:
   create: true
   name: ""
+
+ingress:
+  enabled: false
+  annotations: {}
+  hosts:
+    - host: chart-example.local
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
+  tls: []
