add autoscaling to values file

--- a/mychart/values.yaml
+++ b/mychart/values.yaml
@@ -23,3 +23,9 @@ ingress:
         - path: /
           pathType: ImplementationSpecific
   tls: []
+
+autoscaling:
+  enabled: false
+  minReplicas: 1
+  maxReplicas: 3
+  targetCPUUtilizationPercentage: 80
